# django-email-hosts

./: .pre-commit-config.yaml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: tests.yml
docs/: conf.py
email_hosts/: __init__.py  backends.py
email_hosts/management/commands/: sendtestemailhosts.py
tests/testapp/: settings.py  test_email_hosts.py  views.py
