[metadata]
name = django_email_hosts
version = attr: email_hosts.__version__
description = Support for several SMTP configurations in a single site
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/feinheit/django-email-hosts/
author = Feinheit AG
author_email = dev@feinheit.ch
license = BSD-3-Clause
license_file = LICENSE
platforms = OS Independent
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    Django>=3.2
    speckenv>=3.2
python_requires = >=3.9
include_package_data = True
zip_safe = False

[options.extras_require]
tests =
    coverage

[options.packages.find]
exclude =
    tests
    tests.*

[coverage:run]
branch = True
include =
    *email_hosts*
    *testapp*
omit =
    *migrations*
    *.tox*
